fixed image wrapping issues

--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -22,5 +22,6 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    flex-wrap: wrap;
     margin: 75px;
 }
